fix(100): Fix usage of new generic jpa critera