@@ -19,12 +19,12 @@
 package fr.cnes.regards.modules.ingest.service.aip;
 
 import com.google.common.collect.Lists;
+import fr.cnes.regards.framework.jpa.restriction.ValuesRestrictionMatchMode;
 import fr.cnes.regards.framework.urn.EntityType;
 import fr.cnes.regards.modules.ingest.domain.aip.AIPEntity;
 import fr.cnes.regards.modules.ingest.domain.aip.AIPEntityLight;
 import fr.cnes.regards.modules.ingest.domain.aip.AIPState;
 import fr.cnes.regards.modules.ingest.domain.sip.SIPState;
-import fr.cnes.regards.modules.ingest.dto.aip.SearchAIPLightParameters;
 import fr.cnes.regards.modules.ingest.dto.aip.SearchAIPsParameters;
 import fr.cnes.regards.modules.ingest.service.IngestMultitenantServiceIT;
 import fr.cnes.regards.modules.storage.client.test.StorageClientMock;
@@ -46,11 +46,14 @@ import java.util.List;
  *
  * @author Stephane Cortine
  */
-@TestPropertySource(
-    properties = { "spring.jpa.properties.hibernate.default_schema=sipflow", "spring.jpa.show-sql=false",
-        "regards.amqp.enabled=true", "regards.scheduler.pool.size=4", "regards.ingest.maxBulkSize=100",
-        "eureka.client.enabled=false", "regards.ingest.aip.delete.bulk.delay=100" },
-    locations = { "classpath:application-test.properties" })
+@TestPropertySource(properties = { "spring.jpa.properties.hibernate.default_schema=sipflow",
+                                   "spring.jpa.show-sql=false",
+                                   "regards.amqp.enabled=true",
+                                   "regards.scheduler.pool.size=4",
+                                   "regards.ingest.maxBulkSize=100",
+                                   "eureka.client.enabled=false",
+                                   "regards.ingest.aip.delete.bulk.delay=100" },
+                    locations = { "classpath:application-test.properties" })
 @ActiveProfiles(value = { "testAmqp", "StorageClientMock" })
 public class AIPServiceSearchIT extends IngestMultitenantServiceIT {
 
@@ -104,243 +107,253 @@ public class AIPServiceSearchIT extends IngestMultitenantServiceIT {
     @Test
     public void test_search_AIP_with_tags_storages() {
         // Given
-        SearchAIPLightParameters searchAIPLightParameters = new SearchAIPLightParameters().withTagsIncluded(TAG_0)
-                                                                                          .withStoragesIncluded(Arrays.asList(
-                                                                                              STORAGE_0));
+        SearchAIPsParameters SearchAIPsParameters = new SearchAIPsParameters().withTagsIncluded(TAG_0)
+                                                                              .withStoragesIncluded(List.of(STORAGE_0));
         // When
-        Page<AIPEntity> AIPEntityresults = aipService.findByFilters(SearchAIPsParameters.build()
-                                                                                        .withTags(TAG_0)
-                                                                                        .withStorages(STORAGE_0),
-                                                                    PageRequest.of(0, 100));
+        Page<AIPEntity> AIPEntityResults = aipService.findByFilters(SearchAIPsParameters, PageRequest.of(0, 100));
 
-        Page<AIPEntityLight> AIPEntityLightresults = aipService.findLightByFilters(searchAIPLightParameters,
+        Page<AIPEntityLight> AIPEntityLightResults = aipService.findLightByFilters(SearchAIPsParameters,
                                                                                    PageRequest.of(0, 100));
 
         // Then
-        Assert.assertEquals(2, AIPEntityresults.getTotalElements());
-        Assert.assertEquals(2, AIPEntityLightresults.getTotalElements());
+        Assert.assertEquals(2, AIPEntityResults.getTotalElements());
+        Assert.assertEquals(2, AIPEntityLightResults.getTotalElements());
     }
 
     @Test
     public void test_search_AIPS_with_categories() {
         // Given
-        SearchAIPLightParameters searchAIPLightParameters = new SearchAIPLightParameters().withCategoriesIncluded(
-            CATEGORIES_0);
+        SearchAIPsParameters SearchAIPsParameters = new SearchAIPsParameters().withCategoriesIncluded(CATEGORIES_0);
         // When
-        Page<AIPEntity> AIPEntityresults = aipService.findByFilters(SearchAIPsParameters.build()
-                                                                                        .withCategories(CATEGORIES_0),
-                                                                    PageRequest.of(0, 100));
+        Page<AIPEntity> AIPEntityResults = aipService.findByFilters(SearchAIPsParameters, PageRequest.of(0, 100));
 
-        Page<AIPEntityLight> AIPEntityLightresults = aipService.findLightByFilters(searchAIPLightParameters,
+        Page<AIPEntityLight> AIPEntityLightResults = aipService.findLightByFilters(SearchAIPsParameters,
                                                                                    PageRequest.of(0, 100));
 
         // Then
-        Assert.assertEquals(5, AIPEntityresults.getTotalElements());
-        Assert.assertEquals(5, AIPEntityLightresults.getTotalElements());
+        Assert.assertEquals(5, AIPEntityResults.getTotalElements());
+        Assert.assertEquals(5, AIPEntityLightResults.getTotalElements());
     }
 
     @Test
     public void test_search_AIPS_with_categroies_storages() {
         // Given
-        SearchAIPLightParameters searchAIPLightParameters = new SearchAIPLightParameters().withCategoriesIncluded(
-            CATEGORIES_0).withStoragesIncluded(Arrays.asList(STORAGE_1));
+        SearchAIPsParameters SearchAIPsParameters = new SearchAIPsParameters().withCategoriesIncluded(CATEGORIES_0)
+                                                                              .withStoragesIncluded(List.of(STORAGE_1));
         // When
-        Page<AIPEntity> AIPEntityresults = aipService.findByFilters(SearchAIPsParameters.build()
-                                                                                        .withCategories(CATEGORIES_0)
-                                                                                        .withStorages(STORAGE_1),
-                                                                    PageRequest.of(0, 100));
-        Page<AIPEntityLight> AIPEntityLightresults = aipService.findLightByFilters(searchAIPLightParameters,
+        Page<AIPEntity> AIPEntityResults = aipService.findByFilters(SearchAIPsParameters, PageRequest.of(0, 100));
+        Page<AIPEntityLight> AIPEntityLightResults = aipService.findLightByFilters(SearchAIPsParameters,
                                                                                    PageRequest.of(0, 100));
         // Then
-        Assert.assertEquals(1, AIPEntityresults.getTotalElements());
-        Assert.assertEquals(1, AIPEntityLightresults.getTotalElements());
+        Assert.assertEquals(1, AIPEntityResults.getTotalElements());
+        Assert.assertEquals(1, AIPEntityLightResults.getTotalElements());
     }
 
     @Test
     public void test_search_AIPS_with_storages() {
         // Given
-        SearchAIPLightParameters searchAIPLightParameters = new SearchAIPLightParameters().withStoragesIncluded(Arrays.asList(
+        SearchAIPsParameters SearchAIPsParameters = new SearchAIPsParameters().withStoragesIncluded(Arrays.asList(
             STORAGE_1,
             STORAGE_2));
         // When
-        Page<AIPEntity> AIPEntityresults = aipService.findByFilters(SearchAIPsParameters.build()
-                                                                                        .withStorages(STORAGE_1,
-                                                                                                      STORAGE_2),
-                                                                    PageRequest.of(0, 100));
-        Page<AIPEntityLight> AIPEntityLightresults = aipService.findLightByFilters(searchAIPLightParameters,
+        Page<AIPEntity> AIPEntityResults = aipService.findByFilters(SearchAIPsParameters, PageRequest.of(0, 100));
+        Page<AIPEntityLight> AIPEntityLightResults = aipService.findLightByFilters(SearchAIPsParameters,
                                                                                    PageRequest.of(0, 100));
 
         // Then
-        Assert.assertEquals(4, AIPEntityresults.getTotalElements());
-        Assert.assertEquals(4, AIPEntityLightresults.getTotalElements());
+        Assert.assertEquals(4, AIPEntityResults.getTotalElements());
+        Assert.assertEquals(4, AIPEntityLightResults.getTotalElements());
     }
 
     @Test
     public void test_search_AIPS_with_session_owner() {
         // Given
-        SearchAIPLightParameters searchAIPLightParameters = new SearchAIPLightParameters().withSessionOwner(
-            SESSION_OWNER_1);
+        SearchAIPsParameters SearchAIPsParameters = new SearchAIPsParameters().withSessionOwner(SESSION_OWNER_1);
         // When
-        Page<AIPEntity> AIPEntityresults = aipService.findByFilters(SearchAIPsParameters.build()
-                                                                                        .withSessionOwner(
-                                                                                            SESSION_OWNER_1),
-                                                                    PageRequest.of(0, 100));
-        Page<AIPEntityLight> AIPEntityLightresults = aipService.findLightByFilters(searchAIPLightParameters,
+        Page<AIPEntity> AIPEntityResults = aipService.findByFilters(SearchAIPsParameters, PageRequest.of(0, 100));
+        Page<AIPEntityLight> AIPEntityLightResults = aipService.findLightByFilters(SearchAIPsParameters,
                                                                                    PageRequest.of(0, 100));
 
         // Then
-        Assert.assertEquals(3, AIPEntityresults.getTotalElements());
-        Assert.assertEquals(3, AIPEntityLightresults.getTotalElements());
+        Assert.assertEquals(3, AIPEntityResults.getTotalElements());
+        Assert.assertEquals(3, AIPEntityLightResults.getTotalElements());
     }
 
     @Test
     public void test_search_AIPS_with_session_owner_session() {
         // Given
-        SearchAIPLightParameters searchAIPLightParameters = new SearchAIPLightParameters().withSessionOwner(
-            SESSION_OWNER_0).withSession(SESSION_1);
+        SearchAIPsParameters SearchAIPsParameters = new SearchAIPsParameters().withSessionOwner(SESSION_OWNER_0)
+                                                                              .withSession(SESSION_1);
         // When
-        Page<AIPEntity> AIPEntityresults = aipService.findByFilters(SearchAIPsParameters.build()
-                                                                                        .withSessionOwner(
-                                                                                            SESSION_OWNER_0)
-                                                                                        .withSession(SESSION_1),
-                                                                    PageRequest.of(0, 100));
-        Page<AIPEntityLight> AIPEntityLightresults = aipService.findLightByFilters(searchAIPLightParameters,
+        Page<AIPEntity> AIPEntityResults = aipService.findByFilters(SearchAIPsParameters, PageRequest.of(0, 100));
+        Page<AIPEntityLight> AIPEntityLightResults = aipService.findLightByFilters(SearchAIPsParameters,
                                                                                    PageRequest.of(0, 100));
 
         // Then
-        Assert.assertEquals(2, AIPEntityresults.getTotalElements());
-        Assert.assertEquals(2, AIPEntityLightresults.getTotalElements());
+        Assert.assertEquals(2, AIPEntityResults.getTotalElements());
+        Assert.assertEquals(2, AIPEntityLightResults.getTotalElements());
     }
 
     @Test
     public void test_search_AIPS_with_last_update_from_50_days() {
         // Given
-        SearchAIPLightParameters searchAIPLightParameters = new SearchAIPLightParameters().withLastUpdateAfter(
-            OffsetDateTime.now().plusDays(50));
+        SearchAIPsParameters SearchAIPsParameters = new SearchAIPsParameters().withLastUpdateAfter(OffsetDateTime.now()
+                                                                                                                 .plusDays(
+                                                                                                                     50));
         // When
-        Page<AIPEntity> AIPEntityresults = aipService.findByFilters(SearchAIPsParameters.build()
-                                                                                        .withLastUpdateFrom(
-                                                                                            OffsetDateTime.now()
-                                                                                                          .plusDays(50)),
-                                                                    PageRequest.of(0, 100));
-        Page<AIPEntityLight> AIPEntityLightresults = aipService.findLightByFilters(searchAIPLightParameters,
+        Page<AIPEntity> AIPEntityResults = aipService.findByFilters(SearchAIPsParameters, PageRequest.of(0, 100));
+        Page<AIPEntityLight> AIPEntityLightResults = aipService.findLightByFilters(SearchAIPsParameters,
                                                                                    PageRequest.of(0, 100));
 
         // Then
-        Assert.assertEquals(0, AIPEntityresults.getTotalElements());
-        Assert.assertEquals(0, AIPEntityLightresults.getTotalElements());
+        Assert.assertEquals(0, AIPEntityResults.getTotalElements());
+        Assert.assertEquals(0, AIPEntityLightResults.getTotalElements());
     }
 
     @Test
     public void test_search_AIPS_with_last_update_from_5_min_to_5_days() {
         // Given
-        SearchAIPLightParameters searchAIPLightParameters = new SearchAIPLightParameters().withLastUpdateAfter(
-            OffsetDateTime.now().minusHours(5)).withLastUpdateBefore(OffsetDateTime.now().plusDays(5));
+        SearchAIPsParameters SearchAIPsParameters = new SearchAIPsParameters().withLastUpdateAfter(OffsetDateTime.now()
+                                                                                                                 .minusHours(
+                                                                                                                     5))
+                                                                              .withLastUpdateBefore(OffsetDateTime.now()
+                                                                                                                  .plusDays(
+                                                                                                                      5));
         // When
-        Page<AIPEntity> AIPEntityresults = aipService.findByFilters(SearchAIPsParameters.build()
-                                                                                        .withLastUpdateFrom(
-                                                                                            OffsetDateTime.now()
-                                                                                                          .minusHours(5))
-                                                                                        .withLastUpdateTo(OffsetDateTime.now()
-                                                                                                                        .plusDays(
-                                                                                                                            5)),
-                                                                    PageRequest.of(0, 100));
+        Page<AIPEntity> AIPEntityResults = aipService.findByFilters(SearchAIPsParameters, PageRequest.of(0, 100));
 
-        Page<AIPEntityLight> AIPEntityLightresults = aipService.findLightByFilters(searchAIPLightParameters,
+        Page<AIPEntityLight> AIPEntityLightResults = aipService.findLightByFilters(SearchAIPsParameters,
                                                                                    PageRequest.of(0, 100));
 
         // Then
-        Assert.assertEquals(7, AIPEntityresults.getTotalElements());
-        Assert.assertEquals(7, AIPEntityLightresults.getTotalElements());
+        Assert.assertEquals(7, AIPEntityResults.getTotalElements());
+        Assert.assertEquals(7, AIPEntityLightResults.getTotalElements());
     }
 
     @Test
     public void test_search_AIPS_with_tags() {
         // Given
-        SearchAIPLightParameters searchAIPLightParameters = new SearchAIPLightParameters().withTagsIncluded(Arrays.asList(
-            "toto"));
+        SearchAIPsParameters SearchAIPsParameters = new SearchAIPsParameters().withTagsIncluded(List.of("toto"));
         // When
-        Page<AIPEntity> AIPEntityresults = aipService.findByFilters(SearchAIPsParameters.build().withTag("toto"),
-                                                                    PageRequest.of(0, 100));
-        Page<AIPEntityLight> AIPEntityLightresults = aipService.findLightByFilters(searchAIPLightParameters,
+        Page<AIPEntity> AIPEntityResults = aipService.findByFilters(SearchAIPsParameters, PageRequest.of(0, 100));
+        Page<AIPEntityLight> AIPEntityLightResults = aipService.findLightByFilters(SearchAIPsParameters,
                                                                                    PageRequest.of(0, 100));
 
         // Then
-        Assert.assertEquals(6, AIPEntityresults.getTotalElements());
-        Assert.assertEquals(6, AIPEntityLightresults.getTotalElements());
+        Assert.assertEquals(6, AIPEntityResults.getTotalElements());
+        Assert.assertEquals(6, AIPEntityLightResults.getTotalElements());
     }
 
     @Test
     public void test_search_AIPS_with_tags_0() {
         // Given
-        SearchAIPLightParameters searchAIPLightParameters = new SearchAIPLightParameters().withTagsIncluded(TAG_0);
+        SearchAIPsParameters SearchAIPsParameters = new SearchAIPsParameters().withTagsIncluded(TAG_0);
         // When
-        Page<AIPEntity> AIPEntityresults = aipService.findByFilters(SearchAIPsParameters.build().withTags(TAG_0),
-                                                                    PageRequest.of(0, 100));
-        Page<AIPEntityLight> AIPEntityLightresults = aipService.findLightByFilters(searchAIPLightParameters,
+        Page<AIPEntity> AIPEntityResults = aipService.findByFilters(SearchAIPsParameters, PageRequest.of(0, 100));
+        Page<AIPEntityLight> AIPEntityLightResults = aipService.findLightByFilters(SearchAIPsParameters,
                                                                                    PageRequest.of(0, 100));
         //Then
-        Assert.assertEquals(6, AIPEntityresults.getTotalElements());
-        Assert.assertEquals(6, AIPEntityLightresults.getTotalElements());
+        Assert.assertEquals(6, AIPEntityResults.getTotalElements());
+        Assert.assertEquals(6, AIPEntityLightResults.getTotalElements());
     }
 
     @Test
     public void test_search_AIPS_with_state_stored() {
         // Given
-        SearchAIPLightParameters searchAIPLightParameters = new SearchAIPLightParameters().withStatesIncluded(Arrays.asList(
-            AIPState.STORED));
+        SearchAIPsParameters SearchAIPsParameters = new SearchAIPsParameters().withStatesIncluded(List.of(AIPState.STORED));
         // When
-        Page<AIPEntity> AIPEntityresults = aipService.findByFilters(SearchAIPsParameters.build()
-                                                                                        .withState(AIPState.STORED),
-                                                                    PageRequest.of(0, 100));
-        Page<AIPEntityLight> AIPEntityLightresults = aipService.findLightByFilters(searchAIPLightParameters,
+        Page<AIPEntity> AIPEntityResults = aipService.findByFilters(SearchAIPsParameters, PageRequest.of(0, 100));
+        Page<AIPEntityLight> AIPEntityLightResults = aipService.findLightByFilters(SearchAIPsParameters,
                                                                                    PageRequest.of(0, 100));
 
         // Then
-        Assert.assertEquals(7, AIPEntityresults.getTotalElements());
-        Assert.assertEquals(7, AIPEntityLightresults.getTotalElements());
+        Assert.assertEquals(7, AIPEntityResults.getTotalElements());
+        Assert.assertEquals(7, AIPEntityLightResults.getTotalElements());
+    }
+
+    @Test
+    public void test_search_AIPS_provider_id_like() {
+
+        // Given
+        SearchAIPsParameters SearchAIPsParameters = new SearchAIPsParameters().withProviderIdsIncludedLike(List.of(
+            "RovideR"), ValuesRestrictionMatchMode.CONTAINS, true);
+        SearchAIPsParameters SearchAIPsParametersStarts = new SearchAIPsParameters().withProviderIdsIncludedLike(List.of(
+            "pr"), ValuesRestrictionMatchMode.STARTS_WITH, false);
+        SearchAIPsParameters SearchAIPsParametersEnds = new SearchAIPsParameters().withProviderIdsIncludedLike(List.of(
+            "1"), ValuesRestrictionMatchMode.ENDS_WITH, false);
+
+        // When
+        Page<AIPEntity> AIPEntityResults = aipService.findByFilters(SearchAIPsParameters, PageRequest.of(0, 100));
+        Page<AIPEntity> AIPEntityResultsStarts = aipService.findByFilters(SearchAIPsParametersStarts,
+                                                                          PageRequest.of(0, 100));
+        Page<AIPEntity> AIPEntityResultsEnds = aipService.findByFilters(SearchAIPsParametersEnds,
+                                                                        PageRequest.of(0, 100));
+        Page<AIPEntityLight> AIPEntityLightResults = aipService.findLightByFilters(SearchAIPsParameters,
+                                                                                   PageRequest.of(0, 100));
+
+        // Then
+        Assert.assertEquals(7, AIPEntityLightResults.getTotalElements());
+        Assert.assertEquals(7, AIPEntityResults.getTotalElements());
+        Assert.assertEquals(7, AIPEntityResultsStarts.getTotalElements());
+        Assert.assertEquals(1, AIPEntityResultsEnds.getTotalElements());
+
+    }
+
+    @Test
+    public void test_search_AIPS_provider_id_like_no_result() {
+        // Given
+        SearchAIPsParameters SearchAIPsParameters = new SearchAIPsParameters().withProviderIdsIncludedLike(List.of(
+            "%toto%"), ValuesRestrictionMatchMode.CONTAINS, true);
+
+        // When
+        Page<AIPEntity> AIPEntityResults = aipService.findByFilters(SearchAIPsParameters, PageRequest.of(0, 100));
+        Page<AIPEntityLight> AIPEntityLightResults = aipService.findLightByFilters(SearchAIPsParameters,
+                                                                                   PageRequest.of(0, 100));
+
+        // Then
+        Assert.assertEquals(0, AIPEntityLightResults.getTotalElements());
+        Assert.assertEquals(0, AIPEntityResults.getTotalElements());
+    }
+
+    @Test
+    public void test_search_AIPS_provider_id_not_like() {
+
+        // Given
+        SearchAIPsParameters SearchAIPsParameters = new SearchAIPsParameters().withProviderIdsExcludedLike(List.of(
+            "provider"), ValuesRestrictionMatchMode.CONTAINS, true);
+
+        // When
+        Page<AIPEntityLight> AIPEntityLightResults = aipService.findLightByFilters(SearchAIPsParameters,
+                                                                                   PageRequest.of(0, 100));
+        Page<AIPEntity> AIPEntityResults = aipService.findByFilters(SearchAIPsParameters, PageRequest.of(0, 100));
+
+        // Then
+        Assert.assertEquals(0, AIPEntityLightResults.getTotalElements());
+        Assert.assertEquals(0, AIPEntityResults.getTotalElements());
+
     }
 
     @Test
     public void test_search_AIPS_all_criterias() {
         // Given
-        SearchAIPLightParameters searchAIPLightParameters = new SearchAIPLightParameters().withLastUpdateAfter(
-                                                                                              OffsetDateTime.now().minusHours(5))
-                                                                                          .withLastUpdateBefore(
-                                                                                              OffsetDateTime.now()
-                                                                                                            .plusDays(5))
-                                                                                          .withTagsIncluded(TAG_1)
-                                                                                          .withStoragesIncluded(Arrays.asList(
-                                                                                              STORAGE_2))
-                                                                                          .withCategoriesIncluded(
-                                                                                              CATEGORIES_2)
-                                                                                          .withAipIpType(Arrays.asList(
-                                                                                              EntityType.DATA))
-                                                                                          .withStatesIncluded(Arrays.asList(
-                                                                                              AIPState.STORED))
-                                                                                          .withSessionOwner(
-                                                                                              SESSION_OWNER_1)
-                                                                                          .withSession(SESSION_1);
+        SearchAIPsParameters SearchAIPsParameters = new SearchAIPsParameters().withLastUpdateAfter(OffsetDateTime.now()
+                                                                                                                 .minusHours(
+                                                                                                                     5))
+                                                                              .withLastUpdateBefore(OffsetDateTime.now()
+                                                                                                                  .plusDays(
+                                                                                                                      5))
+                                                                              .withTagsIncluded(TAG_1)
+                                                                              .withStoragesIncluded(List.of(STORAGE_2))
+                                                                              .withCategoriesIncluded(CATEGORIES_2)
+                                                                              .withAipIpType(List.of(EntityType.DATA))
+                                                                              .withStatesIncluded(List.of(AIPState.STORED))
+                                                                              .withSessionOwner(SESSION_OWNER_1)
+                                                                              .withSession(SESSION_1);
 
         // When
-        Page<AIPEntity> resultsAIPEntity = aipService.findByFilters(SearchAIPsParameters.build()
-                                                                                        .withState(AIPState.STORED)
-                                                                                        .withLastUpdateFrom(
-                                                                                            OffsetDateTime.now()
-                                                                                                          .minusHours(5))
-                                                                                        .withLastUpdateTo(OffsetDateTime.now()
-                                                                                                                        .plusDays(
-                                                                                                                            5))
-                                                                                        .withTags(TAG_1)
-                                                                                        .withSessionOwner(
-                                                                                            SESSION_OWNER_1)
-                                                                                        .withSession(SESSION_1)
-                                                                                        .withStorages(STORAGE_2)
-                                                                                        .withCategories(CATEGORIES_2)
-                                                                                        .withIpType(EntityType.DATA),
-                                                                    PageRequest.of(0, 100));
+        Page<AIPEntity> resultsAIPEntity = aipService.findByFilters(SearchAIPsParameters, PageRequest.of(0, 100));
 
-        Page<AIPEntityLight> results = aipService.findLightByFilters(searchAIPLightParameters, PageRequest.of(0, 100));
+        Page<AIPEntityLight> results = aipService.findLightByFilters(SearchAIPsParameters, PageRequest.of(0, 100));
         // Then
         Assert.assertEquals(1, results.getTotalElements());
         Assert.assertEquals(1, resultsAIPEntity.getTotalElements());
